# vhdl_doc

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/spec/: example.vhd  memory_map.md
book/src/spec/memory_map/: README.md  schema.md
src/: lib.rs  main.rs  symbol.rs
src/memory_map/: schema.rs
src/symbol/: symbol.rs
tests/: serde_tests.rs
tests/assets/: memory_map.json  memory_map.toml
