[package]
name = "vhdl_doc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "string"] }
image = "0.25.6"
imageproc = "0.25.0"
schemars = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
vhdl_lang = "0.84.0"
